# external_mkbootimg

./: CMakeLists.txt
include/: decompress.h
lib/libmincrypt/: CMakeLists.txt
src/: decompress.c  mkbootimg.c  unpackbootimg.c
